<resources>
    <string name="app_name">RecipeList</string>
    <string name="action_logout">Logout</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_my_boards">MyBoardsActivity</string>
    <string name="title_activity_my_pins">MyPinsActivity</string>
    <string name="title_activity_ingredients">Shopping List</string>

    <string name="toast_no_ingredient">Error:\nSelected pin has no ingredients associated with it</string>

    <string name="button_view_pins">My Pins</string>
    <string name="button_view_boards">My Boards</string>
    <string name="button_logout">Logout</string>
    <string name="button_get_ingredients">Ingredients</string>

    <string name="button_my_pins_description">Get Shopping List</string>
    <string name="button_ingredients_description">Add Ingredient</string>

    <string name="pinterest_login">Pinterest Login</string>
    <string name="button_remove_description">Remove Ingredient</string>
    <string name="button_edit_description">Edit Ingredient</string>
    <string name="button_expand_description">Expand for larger view of pin</string>

    <string name="ingredient_remove_alert">Delete Ingredient?</string>
    <string name="ingredient_remove_message">Are you sure you want to delete the ingredient \'%s\'?</string>

    <string name="ampersand">&amp;</string>
    <string name="forslash">/</string>
    <string name="number_1">1</string>
    <string name="number_0">0</string>

    <string name="dialog_ingr_units">Units</string>
    <string name="dialog_ingr_name">Name</string>
    <string name="dialog_ingr_category">Category</string>
    <string name="dialog_alert_empty_name">Ingredient name cannot be empty</string>
    <string name="dialog_alert_input_title">Input Error</string>
    <string name="dialog_alert_empty_numbers">Must set an amount for ingredient</string>
    <string name="dialog_alert_empty_category">Ingredient category cannot be empty</string>
    <string name="dialog_ingr_edit_title">Edit Ingredient</string>
    <string name="dialog_ingr_add_title">Add Ingredient</string>

    <string name="pin_recipe_ingrdient_header">Ingredients</string>
    <string name="pin_recipe_serving">Serves %s</string>
    <string name="exit_popout_description">Exit Pin View</string>

    <string name="home_list_tab">Shopping List</string>
    <string name="home_recipe_tab">Recipe</string>
    <string name="base_shopping_ingredient_num">%d ingredients</string>
    <string name="base_no_shopping_list">No Shopping Lists Found</string>
    <string name="base_no_recipes">No Recipes Found</string>
</resources>
