<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.rupert.recipelist.HomeActivity">


<ImageView
    android:layout_width="50dip"
    android:layout_height="50dip"
    android:paddingTop="20dip"
    android:layout_centerHorizontal="true"
    android:id="@+id/profile_imageview"
    />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/name_textview"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:layout_below="@+id/profile_imageview"
    />

<Button
    android:layout_width="200dip"
    android:layout_height="wrap_content"
    android:text="@string/button_view_pins"
    android:id="@+id/pins_button"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/name_textview"
    android:background="@null"
    />

<Button
    android:layout_width="200dip"
    android:layout_height="wrap_content"
    android:text="@string/button_view_boards"
    android:id="@+id/boards_button"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/pins_button"
    android:background="@null"
    />

    <Button
    android:layout_width="200dip"
    android:layout_height="wrap_content"
    android:id="@+id/logout_button"
    android:text="@string/button_logout"
        android:background="@null"
        android:layout_below="@+id/boards_button"
        android:layout_alignStart="@+id/boards_button" />


</RelativeLayout>
