<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/dialog_ingr_whole_num"
            android:inputType="number"
            android:minWidth="28dp"
            android:maxLength="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/number_1"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/dialog_ingr_amp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@+id/dialog_ingr_whole_num"
            android:layout_alignBaseline="@+id/dialog_ingr_whole_num"
            android:text="@string/ampersand"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/dialog_ingr_numerator"
            android:minWidth="28dp"
            android:maxLength="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@+id/dialog_ingr_amp"
            android:layout_alignBaseline="@+id/dialog_ingr_amp"
            android:textSize="18sp"
            android:hint="@string/number_0" />
        <TextView
            android:id="@+id/dialog_ingr_slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@+id/dialog_ingr_numerator"
            android:layout_alignBaseline="@+id/dialog_ingr_numerator"
            android:text="@string/forslash"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/dialog_ingr_den"
            android:minWidth="28dp"
            android:maxLength="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@+id/dialog_ingr_slash"
            android:layout_alignBaseline="@+id/dialog_ingr_slash"
            android:hint="@string/number_1"
            android:textSize="18sp"/>
    </RelativeLayout>
    <!--<RelativeLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content">-->
        <EditText
            android:id="@+id/dialog_ingr_unit"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:hint="@string/dialog_ingr_units"/>
        <!--<TextView-->
            <!--android:id="@+id/dialog_ingr_unit_text"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="2dp"-->
            <!--android:layout_marginEnd="2dp"-->
            <!--android:layout_toEndOf="@+id/dialog_ingr_unit"-->
            <!--android:layout_alignBaseline="@+id/dialog_ingr_unit"-->
            <!--android:text="@string/dialog_ingr_units"-->
            <!--android:textSize="18sp"/>-->
    <!--</RelativeLayout>-->
    <EditText
        android:id="@+id/dialog_ingr_name"
        android:inputType="text"
        android:maxLines="2"
        android:maxLength="50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:hint="@string/dialog_ingr_name"/>
</LinearLayout>